--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "devServer": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "server": "node server.js",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
