--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "openai-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://damiandream.github.io/batalshikov_chat_ai_demo",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -11,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gh-pages": "^6.0.0",
     "openai": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "devServer": "node server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
